--- a/compose.yaml
+++ b/compose.yaml
@@ -1,18 +1,22 @@
 services:
-  postgres:
-    image: postgres
-    container_name: postgres
+  produktserver:
+    image: mysql:8.4.2
+    container_name: produktserver
     restart: always
+    env_file:
+      - .env
     ports:
-      - "5432:5432"
+      - "3310:3306"
     environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
-      - POSTGRES_DB=produkten
+        MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+        MYSQL_DATABASE: ${MYSQL_DATABASE}
+        MYSQL_USER: ${MYSQL_USER}
+        MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+
 
   adminer:
     image: adminer
     container_name: adminer
     restart: always
     ports:
-      - "8080:8080"
+      - "8982:8080"
